--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,9 @@ body {
     font-weight: bolder;
     font-size: 40px;
     align-self: center;
-    border: 1px solid orange;
 }
 
 form {
-    border: 1px solid red;
     padding: 20px;
     display: grid;
     grid-template-columns: 0.2fr 1fr;
@@ -53,6 +51,7 @@ form>button {
     border-radius: 0.5rem;
     border: none;
     box-shadow: 1px 1px 5px black;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 button:active {
@@ -69,7 +68,7 @@ button:active {
     gap: 20px;
 }
 .library>div {
-    background-color: aqua;
+    background-color: rgb(174, 147, 255);
     height: 100%;
     width: 100%;
 }
