--- a/styles.css
+++ b/styles.css
@@ -71,4 +71,21 @@ button:active {
     background-color: rgb(174, 147, 255);
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.library>div>div {
+    display: flex;
+    align-items: center;
+    height: 10%;
+}
+
+.library>div>div>button {
+    height: 30px;
+    border-radius: 0.5rem;
+    border: none;
+    box-shadow: 1px 1px 5px black;
+    font-family: 'Courier New', Courier, monospace;
 }
